fix problems filtering pop3 mail when hidden pref to remove dupes is set, bug 457168, r=standard8, sr=neil, a=standard8